# chip-remu

./: .travis.yml  Cargo.toml  README.md  chip8.org  chip8.reference
src/: cpu.rs  decoder.rs  gpu.rs  instruction.rs  main.rs  memory.rs
