[package]
name = "chip8-remu"
version = "0.1.0"
authors = ["johannst <johannes.stoelp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
minifb = "0.11"
pixel_engine = { git = "https://github.com/johannst/pixel_engine" }
